# cmake_conan_proj

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  build.sh  configure.sh  main.cpp  myprojConfig.h.in  run.sh
src/: CMakeLists.txt  mylib.cpp  mylib.h
